tests/paczka2/big_fuzzy/52383053.err
Error in line 3: A770 A151 -1,0
Error in line 19: 1oKHFvZY S4RR 1R8,4
Error in line 23: ff6X8Mbs A151 29,7
Error in line 17: 1oKHFvZY S422 98,8
Error in line 32: uYfVOj A168 50,6
Error in line 40: uYfVOj A151 1,2
Error in line 41: jsVMQJVgM A151 47,6
Error in line 22: A770 A151 32,4
Error in line 51: uYfVOj A770 53,4
Error in line 61: uYfVOj A151 75,2
Error in line 78: jsVMQJVgM A168 84,0
Error in line 68: A770 A770 35,9
Error in line 94: 8vNEH7w2vI S422 685,6
Error in line 102: uYfVOj A168 20,1
Error in line 90: A770 S422 45,9
Error in line 108: A770 S422 90,1
Error in line 115: jsVMQJVgM A1V1 V0,V
Error in line 114: 1oKHFvZY A168 96,7
Error in line 93: fDP0UR A168 2,9
Error in line 122: ff6X8Mbs A168 75,0
Error in line 129: ff6X8Mbs A770 51,5
Error in line 109: jsVMQJVgM A151 30,4
Error in line 133: 8vNEH7w2vI A151 1,5
Error in line 137: 8vNEH7w2vI A168 59,1
Error in line 132: ff6X8Mbs S422 9,3
Error in line 143: A770 A770 6,0
Error in line 145: 8vNEH7w2vI S422 85,2
Error in line 150: 8vNEH7w2vI A151 96,6
Error in line 152: 1oKHFvZY A770 19,6
Error in line 170: jsVMQJVgM A151 -1,2
Error in line 148: jsVMQJVgM A151 38,8
Error in line 149: uYfVOj A168 24,4
Error in line 168: fDP0UR A151 94,7
Error in line 181: jsVMQJVgM A168 -3,1
Error in line 179: jsVMQJVgM A168 57,7
Error in line 192: A770 A151 36,0
Error in line 177: fDP0UR A770 67,8
Error in line 202: fDP0UR A168 85,8
Error in line 203: fDP0UR A770 6,5
Error in line 211: uYfVOj A168 18,7
Error in line 220: 8vNEH7w2vI A151 62,3
Error in line 212: uYfVOj A151 11,2
Error in line 222: uYfVOj A168 2,1
Error in line 227: A770 A168 40,8
Error in line 214: 1oKHFvZY A151 54,5
Error in line 240: jsVMQJVgM A168 137,7
Error in line 245: jsVMQJVgM A770 84,4
Error in line 242: 1oKHFvZY A168 80,0
